Added intro section where you can chouse your quiz difficulty and start the quiz

--- a/styles/main.css
+++ b/styles/main.css
@@ -55,6 +55,90 @@
   opacity: 0;
 }
 
+.quiz {
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.quiz-show {
+  opacity: 1;
+  pointer-events: initial;
+}
+
+.select-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.options-container {
+  background-color: #607196;
+  width: 125px;
+  position: relative;
+  margin-top: 5px;
+  max-height: 0px;
+  border-radius: 5px;
+  overflow: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  color: #e8e9ed;
+  text-align: center;
+}
+
+.options-container.active {
+  max-height: 500px;
+  opacity: 1;
+}
+
+.option {
+  padding: 0.35rem 0.5rem;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  font-size: 0.75em;
+}
+
+.option:hover {
+  background-color: #babfd1;
+}
+
+.active-option {
+  background-color: #8289a3;
+}
+
+.active-option:hover {
+  background-color: #8289a3;
+}
+
+.selected-btn {
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 0.25rem 0.5rem;
+  text-align: center;
+  background-color: #607196;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+}
+
+.selected-btn:hover {
+  background-color: #889ac2 !important;
+}
+
 * {
   margin: 0;
   padding: 0;
