--- a/styles/_question-feedback.scss
+++ b/styles/_question-feedback.scss
@@ -1,5 +1,36 @@
 .question-feedback-container {
+  width: 50%;
+  margin: auto;
+  margin-top: 5rem;
   transition: all 0.1s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+
+  height: 15vh;
+  color: rebeccapurple;
+
+  button {
+    outline: none;
+    border: none;
+
+    padding: 1rem 2rem;
+    border-radius: 5px;
+
+    background-color: #5eaaa8;
+    color: #f0f0f0;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      padding: 1rem 4rem;
+      background-color: #5eaaa800;
+      border: 2px solid #5eaaa8;
+      color: #5eaaa8;
+    }
+  }
 }
 
 .hide-question-feedback {
