--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,14 @@
 @import "./quiz";
 @import "./select-box";
+@import "./intro";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+}
+
+body {
+  background-color: #f7f3e9;
 }
