--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -1,5 +1,6 @@
 .intro {
-  width: 50%;
+  max-width: 800px;
+  padding: 0 1rem;
   height: 50vh;
   margin: auto;
   margin-top: 4rem;
@@ -9,6 +10,7 @@
   align-items: center;
 
   transition: all 0.4s ease-in-out;
+  animation: fadeIn 0.4s ease-in-out;
 
   h1 {
     text-align: center;
@@ -50,4 +52,38 @@
   height: 0px;
   overflow: hidden;
   opacity: 0;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    height: 0;
+  }
+
+  to {
+    opacity: 1;
+    height: 50vh;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .select-box-container {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    & > div {
+      width: 100%;
+      margin-bottom: 1rem;
+    }
+  }
+
+  .intro {
+    max-width: 90%;
+    padding: 0;
+  }
+
+  .start-quiz {
+    width: 100%;
+  }
 }
