--- a/styles/_question.scss
+++ b/styles/_question.scss
@@ -1,5 +1,6 @@
 .question-container {
-  width: 75%;
+  max-width: 900px;
+  padding: 0 1rem;
   margin: auto;
   flex-direction: column;
 }
@@ -9,10 +10,18 @@
   color: #f05945;
   flex-grow: 1;
   font-size: 2em;
-  margin-top: 4rem;
+  padding: 2rem;
+}
+.title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  background-color: #f1e5c7;
+  border-radius: 1.5625rem;
+  margin-top: 6rem;
   margin-bottom: 2rem;
 }
-
 .answers-container {
   display: flex;
   width: 100%;
@@ -20,7 +29,8 @@
 }
 
 .answare {
-  padding: 1rem 2rem;
+  width: 12.5rem;
+  height: 100px;
   background-color: rgb(163, 163, 163);
   color: #f7f3e9;
   border: none;
@@ -59,4 +69,27 @@
   justify-content: space-evenly;
   text-align: center;
   color: rebeccapurple;
+  margin-top: 4rem;
+}
+
+@media only screen and (max-width: 960px) {
+  .answers-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .answare {
+    margin-bottom: 1rem;
+    height: 60px;
+    width: 100%;
+  }
+  .question-title {
+    font-size: 1.25em;
+  }
+  .title-container {
+    margin-top: 2rem;
+  }
+  .quiz-info-container {
+    margin-top: 1rem;
+  }
 }
