--- a/styles/_results.scss
+++ b/styles/_results.scss
@@ -1,18 +1,27 @@
-.question-feedback-container {
+.results {
+  opacity: 0;
+  overflow: hidden;
+  pointer-events: none;
+
   max-width: 900px;
   padding: 0 1rem;
-  margin: auto;
-  margin-top: 4rem;
-  transition: all 0.1s ease-in-out;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  pointer-events: initial;
 
-  height: 15vh;
+  text-align: center;
   color: rebeccapurple;
+  display: none;
+
+  transition: all 0.4s ease-in-out;
+
+  &__title {
+    font-size: 3em;
+    margin: 3rem 0;
+  }
+
+  &__content {
+    h2:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
+  }
 
   button {
     outline: none;
@@ -20,6 +29,8 @@
 
     padding: 1rem 2rem;
     border-radius: 5px;
+
+    margin-top: 2rem;
 
     background-color: #5eaaa8;
     color: #f0f0f0;
@@ -35,19 +46,13 @@
   }
 }
 
-.hide-question-feedback {
-  opacity: 0;
-  pointer-events: none;
+.results-show {
+  opacity: 1;
+  pointer-events: initial;
 }
 
 @media only screen and (max-width: 960px) {
-  .question-feedback {
+  .play-again {
     width: 100%;
-  }
-  .next-question {
-    width: 100%;
-  }
-  .question-feedback-container {
-    margin-bottom: 4rem;
   }
 }
